backend supports both socket and cli based invocation

--- a/web/index.html
+++ b/web/index.html
@@ -31,11 +31,12 @@
                     <a class="nav-link" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <router-link class="nav-link" to="pull">Uploaded images</router-link>
+                    <router-link class="nav-link" to="push">Push images</router-link>
                 </li>
                 <li class="nav-item">
-                    <router-link class="nav-link" to="push">Images to upload</router-link>
+                    <router-link class="nav-link" to="pull">Pull images</router-link>
                 </li>
+
                 <li class="nav-item">
                     <router-link class="nav-link" to="config">Configuration</router-link>
                 </li>
@@ -44,7 +45,7 @@
         </header>
     </div>
     <div class="container">
-        <div class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+        <div class="d-flex flex-wrap py-3 mb-4 border-bottom">
             <router-view></router-view>
         </div>
     </div>
